--- a/i3/config
+++ b/i3/config
@@ -13,18 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+font pango:DejaVu Sans Mono 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -36,7 +25,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+q kill
 
 # Open chromium
-bindsym  $mod+b exec google-chrome-stable
+bindsym  $mod+b exec firefox
 
 # Control volume
 bindsym XF86AudioRaiseVolume exec amixer sset Master 5%+
@@ -182,22 +171,31 @@ default_border pixel 3
 # finds out, if available)
 bar {
 	position top
-	status_command i3blocks -c ~/.config/i3/i3blocks.conf
-  	colors {
-    		separator #ffffff
-    		background #3c3b37
-    		statusline #ffffff
-    		focused_workspace #526532 #526532 #ffffff #ffffff
-    		active_workspace #aea79f #aea79f #3c3b37 #ffffff
-    		inactive_workspace #3c3b37 #3c3b37 #aea79f #888888
-    		urgent_workspace #FF0000 #FF0000 #ffffff #ffffff
-  	}
+	status_command i3status -c ~/.config/i3/i3status.conf
+	colors {
+		background #3c3836
+		statusline #ebdbb2
+		separator  #666666
+
+		
+		focused_workspace  #458588 #458588 #ebdbb2
+		active_workspace   #83a598 #83a598 #ebdbb2
+		inactive_workspace #504945 #504945 #ebdbb2
+		urgent_workspace   #cc241d #cc241d #504945
+	}
 }
 
-# wallpaper
-exec feh --bg-center ~/.config/i3/background.jpg
 
-client.focused #526532 #526532 #ffffff #a4cb64
-client.focused_inactive #aea79f #aea79f #3c3b37 #aea79f
-client.unfocused #3c3b37 #3c3b37 #aea79f #3c3b37
-client.urgent #FF0000 #FF0000 #ffffff #FF0000
+# Modify keymap
+exec xmodmap ~/.Xmodmap
+
+# Background color
+exec --no-startup-id xsetroot -solid "#282828"
+
+client.focused          #665c54 #665c54 #eddbb2 #2e9ef4   #665c54
+client.focused_inactive #282828 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #3c3836 #3c3836 #a89984 #292d2e   #222222
+client.urgent           #cc241d #cc241d #ebdbb2 #cc241d   #cc241d
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
